[package]
name = "axum_stripe"
version = "0.1.0"
edition = "2024"

[dependencies]
anyhow = "1.0.86"
async-stripe = { version = "0.37.1", default-features=false, features = ["full", "webhook-events", "stream", "tokio", "runtime-tokio-hyper-rustls"] }
axum = { version = "0.8", features = ["ws", "macros", "multipart", "http2"] }
axum_auth_user = { git = "https://github.com/subseq-io/axum_auth_user.git", branch = "main" }
chrono = { version = "0.4.41", features = ["serde"] }
serde = { version = "1.0.194", features = ["derive"] }
serde_json = "1.0.111"
sqlx = { version = "0.8", features = ["runtime-tokio-rustls"] }
tokio = { version = "1.35.1", features = ["sync", "macros", "rt", "time"] }
tracing = "0.1.40"
uuid = { version = "1.8.0", features = ["v4", "serde"] }

[features]
default = []
sqlite = ["sqlx/sqlite"]
postgres = ["sqlx/postgres"]
