[package]
name = "axum_stripe"
version = "0.1.0"
edition = "2024"

[dependencies]
anyhow = "1.0.86"
async-stripe = { version = "0.37.1", default-features=false, features = ["full", "webhook-events", "stream", "tokio", "runtime-tokio-hyper-rustls"] }
chrono = { version = "0.4.41", features = ["serde"] }
serde = { version = "1.0.194", features = ["derive"] }
serde_json = "1.0.111"
tracing = "0.1.40"
uuid = { version = "1.8.0", features = ["v4", "serde"] }
